# ectf-2025

./: .gitignore  README.md  Toolchain_setup_notes.txt  setup.py
2025_custom_python_tools.egg-info/: PKG-INFO  SOURCES.txt
aescrack/: Cargo.toml  README.md  plaintext.txt  text.aes  text.txt  to_send_large.txt  to_send_small.txt
aescrack/scripts/: crack.py
aescrack/src/: main.rs
decoder/: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs  memory.x
decoder/src/: main.rs
decoder/src/commands/: mod.rs
decoder/src/message/: mod.rs  packet.rs  receive.rs  transmit.rs
decoder/src/sys/: aes.rs  allocator.rs  decrypt.rs  flash.rs  keys.rs  mod.rs  rng.rs  secure_memory.rs  test_flash.rs
decoder/src/utils/: buffer.rs  mod.rs  timestamp.rs
design/: README.md  pyproject.toml
design/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py
design/tests/: fuzz_encoder.py  fuzz_gen_secrets.py  fuzz_gen_subscription.py
doc/: Aidan Notebook.docx  ~$dan Notebook.docx  ~WRL3102.tmp
encoder/: pyproject.toml
encoder/ectf25_design/: encoder.py  gen_secrets.py  gen_subscription.py
encoder/tests/: fuzz_encoder.py  fuzz_gen_secrets.py  fuzz_gen_subscription.py
frames/: x_c1.json  x_c1_odd.json
our-tools/: program_uc.py  update.py
projects/example/: Cargo.toml  memory.x
projects/example/src/: main.rs
tools/: program_uc.py  pyproject.toml
tools/ectf25/tv/: list.py  subscribe.py
tools/ectf25/utils/: tester.py
