[package]
name = "aescrack"
authors = ["spencer"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = "0.5.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
max7800x-hal = { version = "0.7.0", git = "https://github.com/Hammer-Industries-ECTF/max7800x-hal" }
panic-halt = "1.0.0"
panic-semihosting = "0.6.0"
embedded-alloc = "0.6.0"
rand = { version = "0.8.5", default-features = false }
cipher = "0.4.4"

# Uncomment if you want to use semihosting
# cortex-m-semihosting = "0.5"
